--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     </style>
 </head>
 <body>
-    <h1>Willkommen!</h1>
-    <p>Hier findest du die Links zu den Musikvereinen:</p>
+    <h1>Griaß Di!</h1>
+    <p>Wenn Du me über os wissa wilsch no gug mol do nai:</p>
     <div class="link-container">
         <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
-        <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weißbuch</a>
+        <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
     </div>
 </body>
 </html>
