--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <h1>Griaß Di!</h1>
-    <p>Wenn Du me über os wissa wilsch no gug mol do nai:</p>
+    <p>Hier findest du die Links zu den Musikvereinen:</p>
     <div class="link-container">
         <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
         <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
