--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 </head>
 <body>
     <h1>Griaß Di!</h1>
-    <p>Hier findest du die Links zu den Musikvereinen:</p>
+    <p>Wir WeWiBächer kommen aus Weissbuch und Winterbach, schau doch mal auf unseren Internetseiten vorbei:</p>
     <div class="link-container">
-        <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
         <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
+        <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
     </div>
 </body>
 </html>
