--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <h1>Griaß Di!</h1>
-    <p>Wir WeWiBächer kommen aus Weissbuch und Winterbach, schau doch mal auf unseren Internetseiten vorbei:</p>
+    <p>Party, Gaudi, Feschdlesgang – Klick dich nei und sei dabei!</p>
     <div class="link-container">
         <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
         <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
