--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <h1>Griaß Di!</h1>
-    <p>Party, Gaudi, Feschdlesgäng – <br> Klick dich nei und sei ein Fän!</p>
+    <p>Party, Gaudi, FeschdlesGäng – <br> Klick dich nei und sei ein Fän!</p>
     <div class="link-container">
         <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
         <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
