--- a/index.html
+++ b/index.html
@@ -17,19 +17,46 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            overflow: hidden;
         }
-        h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
+        .animated-text span {
+            display: inline-block;
+            opacity: 0;
+            transform: translateY(-50px);
+            animation: letterFlyIn 0.5s ease-out forwards;
         }
+        @keyframes letterFlyIn {
+            from { opacity: 0; transform: translateY(-50px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .animated-text span:nth-child(1) { animation-delay: 0.1s; }
+        .animated-text span:nth-child(2) { animation-delay: 0.2s; }
+        .animated-text span:nth-child(3) { animation-delay: 0.3s; }
+        .animated-text span:nth-child(4) { animation-delay: 0.4s; }
+        .animated-text span:nth-child(5) { animation-delay: 0.5s; }
+        .animated-text span:nth-child(6) { animation-delay: 0.6s; }
+        .animated-text span:nth-child(7) { animation-delay: 0.7s; }
         p {
             font-size: 1.2em;
             margin-bottom: 30px;
+            opacity: 0;
+            transform: translateY(50px);
+            animation: slideUp 1.5s ease-out 1.5s forwards;
+        }
+        @keyframes slideUp {
+            from { opacity: 0; transform: translateY(50px); }
+            to { opacity: 1; transform: translateY(0); }
         }
         .link-container {
             display: flex;
             flex-direction: column;
             gap: 15px;
+            opacity: 0;
+            animation: fadeInLinks 1.5s ease-out 3s forwards;
+        }
+        @keyframes fadeInLinks {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
         a {
             font-size: 20px;
@@ -49,8 +76,10 @@
     </style>
 </head>
 <body>
-    <h1>Griaß Di!</h1>
-    <p>Party, Gaudi, FeschdlesGäng – <br> Klick Di nei und sei ein Fän!</p>
+    <h1 class="animated-text">
+        <span>G</span><span>r</span><span>i</span><span>a</span><span>ß</span><span>&nbsp;</span><span>D</span><span>i</span><span>!</span>
+    </h1>
+    <p>Party, Gaudi, FeschdlesGäng – <br> klick Di nei und sei ein Fän!</p>
     <div class="link-container">
         <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
         <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
