--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h1 class="animated-text">
         <span>G</span><span>r</span><span>i</span><span>a</span><span>ß</span><span>&nbsp;</span><span>D</span><span>i</span><span>!</span>
     </h1>
-    <p>Party, Gaudi, FeschdlesGäng – <br> Klick Di nei und sei ein Fän!</p>
+    <p>Party, Gaudi, FeschdlesGäng – <br> klick Di nei und sei ein Fän!</p>
     <div class="link-container">
         <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
         <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
