--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <title>Musikvereine</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background: url('Partybild_Hintergrund.jpg') no-repeat center center/cover;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-        }
+    		font-family: 'Arial', sans-serif;
+   		text-align: center;
+  		margin: 0;
+  		padding: 0;
+    		background: url('Partybild_Hintergrund.jpg') no-repeat center center/cover;
+    		color: white;
+    		display: flex;
+    		flex-direction: column;
+    		align-items: center;
+    		justify-content: center;
+    		height: 100vh;
+    		overflow: hidden;
+    		animation: moveBackground 10s infinite linear alternate;
+	}
+
+	@keyframes moveBackground {
+    		0% { background-position: left center; }
+    		100% { background-position: right center; }
+	}
+
+
+
         .animated-text span {
             display: inline-block;
             opacity: 0;
@@ -79,7 +88,7 @@
     <h1 class="animated-text">
         <span>G</span><span>r</span><span>i</span><span>a</span><span>ß</span><span>&nbsp;</span><span>D</span><span>i</span><span>!</span>
     </h1>
-    <p>Party, Gaudi, FeschdlesGäng – <br> klick Di nei und sei ein Fän!</p>
+    <p>Party, Gaudi, FeschdlesGäng – <br> Klick Di nei und sei ein Fän!</p>
     <div class="link-container">
         <a href="https://www.mv-weissbuch.de" target="_blank">Musikverein Weissbuch</a>
         <a href="https://www.mv-winterbach.de" target="_blank">Musikverein Winterbach</a>
