--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 30px;
+      margin-top: 0px;
       padding: 10px;
       border: 2px solid rgba(255, 255, 255, 0.2);
       border-radius: 10px;
@@ -93,7 +93,7 @@
 	  margin-top: 50px;
       position: relative;
       /*position: absolute;*/
-      /*bottom: 20px;*/
+      bottom: 20px;
     }
 
     .progress-bar {
