--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       justify-content: center;
       text-align: center;
       padding: 20px;
+	  font-size: 0.8em; /* Kleinere Schriftgröße */
     }
 
     .close-btn {
