--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   </div>
 
   <div class="audio-container animated-section">
-    <div class="highlighted-text">FeschdlesGäng-Song</div>
+    <div class="highlighted-text">FeschdlesGäng-Hit</div>
     <div class="audio-controls">
       <button onclick="playSong()">▶</button>
       <button onclick="pauseSong()">⏸</button>
